sandbox/output
StringCalculator.java:14: error: variable result might not have been initialized
                result +=a;
                ^
StringCalculator.java:16: error: variable result might not have been initialized
            return result;
                   ^
2 errors
